# Tick

./: .gitignore  .n8n-smoke-test  README.md
ai-server/: .dockerignore  Dockerfile  README.md  pyproject.toml
ai-server/app/: config.py  deps.py  embedding.py  llm.py  main.py  retriever.py  summary.py
ai-server/app/adapters/cache/: noop_summary_cache.py  redis_summary_cache.py
ai-server/app/adapters/embedding/: openai_embedding_adapter.py
ai-server/app/adapters/llm/: anthropic_claude_adapter.py
ai-server/app/adapters/observability/: langfuse_callback.py  langfuse_trace_adapter.py  noop_trace_adapter.py
ai-server/app/adapters/query_rewrite/: haiku_query_rewrite_adapter.py  noop_query_rewrite_adapter.py
ai-server/app/adapters/reranker/: cohere_reranker_adapter.py
ai-server/app/application/: citation_parser.py
ai-server/app/config/: settings.py
ai-server/app/ports/: embedding_port.py  llm_port.py  query_rewrite_port.py  reranker_port.py  retriever_port.py  sector_fallback_port.py  summary_cache_port.py  trace_port.py
ai-server/evals/: EVAL_REPORT.md  PLAYBOOK.md  README.md  bootstrap.sh  check_regression.py  eval_settings.py  golden_set.jsonl  harness.sh  judge.py  run_eval.py  schemas.py
ai-server/evals/results/: 2026-07-02_after-dart-added.json  2026-07-02_baseline-naver-only.json  2026-07-03_after-hybrid-judge-median.json  2026-07-03_after-hybrid-no-rerank.json  2026-07-03_after-hybrid-rerank.json  2026-07-06_after-hybrid-cited-denoised.json  2026-07-06_after-hybrid-judge-adaptive.json  2026-07-07_after-multi-judge.json
backend/: .dockerignore  (+6 more)
(+256 files in other folders)
