[project]
name = "tick-ai-server"
version = "0.1.0"
description = "Tick AI server - RAG (pgvector + Anthropic Claude + OpenAI embeddings)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "anthropic>=0.40",
    "openai>=1.55",
    "httpx>=0.28",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7",
    "pytest>=8.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
