[project]
name = "tick-ai-server"
version = "0.2.0"
description = "Tick AI server - hexagonal RAG (LangChain + pgvector + Anthropic + OpenAI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # DB
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    # LangChain 생태계
    "langchain>=0.3.7",
    "langchain-core>=0.3.20",
    "langchain-openai>=0.2.10",
    "langchain-anthropic>=0.3.0",
    # 직접 SDK (LangChain 거치지 않는 일부 경로 — Anthropic prompt cache 등)
    "anthropic>=0.40",
    "openai>=1.55",
    "httpx>=0.28",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
